fix: fixed neoforge unit test facilities
Signed-off-by: meza <211977+meza@users.noreply.github.com>